--- a/TelosysTools/templates/angularjs_html5/offline_appcache.vm
+++ b/TelosysTools/templates/angularjs_html5/offline_appcache.vm
@@ -11,19 +11,21 @@ css/toastr.css
 img/glyphicons-halflings-white.png
 img/glyphicons-halflings.png
 
-js/angular.min.js
-js/bootstrap.min.js
-js/jquery.js
-js/modernizr.custom.js
-js/datastore.js
-js/offline.js
-js/toastr.js
-js/mainctrl.js
-js/cacheApp.js
+jsext/angular.min.js
+jsext/bootstrap.min.js
+jsext/jquery.js
+jsext/modernizr.custom.js
+jsext/toastr.js
+
+jsin/cacheApp.js
+jsin/datastore.js
+jsin/offline.js
+
+gen/js/mainctrl.js
 
 #foreach ( $entityClass in $selectedEntities )
-jsmodules/${entityClass.name.toLowerCase()}/${entityClass.name.toLowerCase()}ctrl.js
-jsmodules/${entityClass.name.toLowerCase()}/${entityClass.name.toLowerCase()}srv.js
+gen/jsmodules/${entityClass.name.toLowerCase()}/${entityClass.name.toLowerCase()}ctrl.js
+gen/jsmodules/${entityClass.name.toLowerCase()}/${entityClass.name.toLowerCase()}srv.js
 #end 
 
 main/footer.html
@@ -32,9 +34,9 @@ main/inprogress.html
 main/welcome.html
 
 #foreach ( $entityClass in $selectedEntities )
-pages/${entityClass.name.toLowerCase()}/create.html
-pages/${entityClass.name.toLowerCase()}/edit.html
-pages/${entityClass.name.toLowerCase()}/list.html
+gen/pages/${entityClass.name.toLowerCase()}/create.html
+gen/pages/${entityClass.name.toLowerCase()}/edit.html
+gen/pages/${entityClass.name.toLowerCase()}/list.html
 #end 
 
 NETWORK:
