--- a/TelosysTools/templates/angularjs_html5/offline_appcache.vm
+++ b/TelosysTools/templates/angularjs_html5/offline_appcache.vm
@@ -1,12 +1,13 @@
 CACHE MANIFEST
  
-# Build 2013-01-29-14h52
+# Build $today.date("dd/MM/yyyy HH:mm")
  
 CACHE:
-css/bootstrap-responsive.min.css
-css/bootstrap.min.css
-css/custom.css
-css/toastr.css
+cssext/bootstrap-responsive.min.css
+cssext/bootstrap.min.css
+cssext/toastr.css
+
+cssin/custom.css
 
 img/glyphicons-halflings-white.png
 img/glyphicons-halflings.png
