--- a/TelosysTools/templates/angularjs_html5/edit_html.vm
+++ b/TelosysTools/templates/angularjs_html5/edit_html.vm
@@ -1,5 +1,5 @@
 
-<div id="${beanClass.name.toLowerCase()}Edit" ng-controller="${beanClass.name}DetailCtrl">
+<div id="${beanClass.name.toLowerCase()}Edit" data-ng-controller="${beanClass.name}DetailCtrl">
  
     <h2>${beanClass.name} Edit</h2>
     
@@ -9,15 +9,15 @@
  		<div class="control-group">
 			<label class="control-label" for="${field.name}">${field.name}</label>
 			<div class="controls">
-				<input type="text" id="${field.name}" ng-model="one${beanClass.name.toLowerCase()}.${field.name}" />
+				<input type="text" id="${field.name}" data-ng-model="one${beanClass.name.toLowerCase()}.${field.name}" />
 			</div>
 		</div>
   	#end
 
 	</form>
  	<br />
-    <button ng-click="update${beanClass.name}()">Save</button>
-    <button ng-click="remove${beanClass.name}()">Remove</button>
-	<button ng-click="openList${beanClass.name}Page()">Return to list</button>
+    <button data-ng-click="update${beanClass.name}()">Save</button>
+    <button data-ng-click="remove${beanClass.name}()">Remove</button>
+	<button data-ng-click="openList${beanClass.name}Page()">Return to list</button>
  
 </div>
