--- a/TelosysTools/templates/angularjs_html5/create_html.vm
+++ b/TelosysTools/templates/angularjs_html5/create_html.vm
@@ -1,5 +1,5 @@
 
-<div id="${beanClass.name.toLowerCase()}Create" ng-controller="${beanClass.name}CreateCtrl">
+<div id="${beanClass.name.toLowerCase()}Create" data-ng-controller="${beanClass.name}CreateCtrl">
  
     <h2>${beanClass.name} Create</h2>
  
@@ -9,7 +9,7 @@
  		<div class="control-group">
 			<label class="control-label" for="${field.name}">${field.name}</label>
 			<div class="controls">
-				<input type="text" id="${field.name}" ng-model="one${beanClass.name.toLowerCase()}.${field.name}" />
+				<input type="text" id="${field.name}" data-ng-model="one${beanClass.name.toLowerCase()}.${field.name}" />
 			</div>
 		</div>
   	#end
@@ -17,7 +17,7 @@
 	</form>
 
  	<br />
-    <button ng-click="save${beanClass.name}()">Save</button>
-	<button ng-click="openList${beanClass.name}Page()">Return to list</button>
+    <button data-ng-click="save${beanClass.name}()">Save</button>
+	<button data-ng-click="openList${beanClass.name}Page()">Return to list</button>
   
 </div>
